--- a/web/usuario/cadUsuario.xhtml
+++ b/web/usuario/cadUsuario.xhtml
@@ -7,7 +7,7 @@
 
     <ui:define name="corpo">
         <h:form id="formUsuario">
-            <p:dialog widgetVar="dlgAdministrador" 
+            <p:dialog widgetVar="dlgUsuario" 
                       header="Usuário"
                       resizable="false" 
                       closable="true"
@@ -28,27 +28,19 @@
                     <h:outputText value="Nome:"/>
                     <p:inputText value="#{usuarioBean.usuario.nome}"
                                  size="30"
-                                 required="true"/>
-
-                    <h:outputText value="Sexo" />
-                    <p:selectOneRadio id="sex" 
-                                      value="#{usuarioBean.enumsSexo}"
-                                      converter="sexoConverter">
-                        <f:selectItems value="#{usuarioBean.usuario.sexo}"
-                                       var="sexo"
-                                       itemLabel="#{sexo.sexo}" itemValue="#{sexo}" />                        
-                    </p:selectOneRadio>
+                                 required="true"
+                                 requiredMessage="CHUPA NA MINHA GIROMBA, XINÓCA!!!"/>
 
                     <h:outputText value="CPF:"/>
                     <p:inputMask value="#{usuarioBean.usuario.cpf}" 
                                  mask="999-999-999-99"
                                  required="true"
-                                 validator="#{usuarioBean.validateEmail}"/>
+                                 validator="#{usuarioBean.validateCPF}"/>
 
                     <h:outputText value="E-mail:"/>
                     <p:inputText value="#{usuarioBean.usuario.email}"
                                  size="30"
-                                 validator="emailValidator"
+                                 validator="#{usuarioBean.validateEmail}"
                                  required="true">
                     </p:inputText>
                     <h:outputText value="Senha"/>
