Restaurar senha está funcional.

--- a/web/usuario/cadUsuario.xhtml
+++ b/web/usuario/cadUsuario.xhtml
@@ -33,7 +33,7 @@
 
                     <h:outputText value="CPF:"/>
                     <p:inputMask value="#{usuarioBean.usuario.cpf}" 
-                                 mask="999-999-999-99"
+                                 mask="999.999.999-99"
                                  required="true"
                                  requiredMessage="O campo CPF é obrigatório"
                                  validator="#{usuarioBean.validateCPF}"
