--- a/web/game/jogo.xhtml
+++ b/web/game/jogo.xhtml
@@ -5,6 +5,13 @@
                 template="/templates/template.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:define name="corpo">
+        <h:outputScript library="default/js" name="js_jogo.js"/>
+        <script type="text/javascript">
+            function update() {
+//                debugger;
+                console.log(Mensagem.getMessage());
+            }
+        </script>
         <h:form id="formJogo">
             <p:dialog widgetVar="dlgJogo" 
                       header="Jogo"
@@ -19,48 +26,57 @@
                     <p:button id="btn_0"
                               value=" "
                               class="btn"
-                              onclick="click(this);"/>
+                              onclick="update()"
+                              binding="#{jogoBean.btn_0}"/>
 
                     <p:button id="btn_1"
                               value=" "
                               class="btn"
-                              onclick="click(this);"/>
+                              onclick="checkSquart(this);"
+                              binding="#{jogoBean.btn_1}"/>
 
                     <p:button class="btn"
                               value=" "
                               id="btn_2"
-                              onclick="click(this);"/>                              
+                              onclick="checkSquart(this);"
+                              binding="#{jogoBean.btn_2}"/>
 
                     <p:button class="btn"
                               value=" "
                               id="btn_3"
-                              onclick="click(this);"/>
+                              onclick="checkSquart(this);"
+                              binding="#{jogoBean.btn_3}"/>
 
                     <p:button class="btn"
                               value=" "
                               id="btn_4"
-                              onclick="click(this);"/>
-                              
+                              onclick="checkSquart(this);"
+                              binding="#{jogoBean.btn_4}"/>
+
                     <p:button class="btn"
                               value=" "
                               id="btn_5"
-                              onclick="click(this);"/>                              
+                              onclick="checkSquart(this);"
+                              binding="#{jogoBean.btn_5}"/>
 
                     <p:button class="btn"
                               value=" "
                               id="btn_6"
-                              onclick="click(this);"/>
+                              onclick="checkSquart(this);"
+                              binding="#{jogoBean.btn_6}"/>
 
                     <p:button class="btn"
                               value=" "
                               id="btn_7"
-                              onclick="click(this);"/>                              
+                              onclick="checkSquart(this);"
+                              binding="#{jogoBean.btn_7}"/>
 
                     <p:button class="btn"
                               value=" "
                               id="btn_8"
-                              onclick="click(this);"/>                              
-                </h:panelGrid>
+                              onclick="checkSquart(this);"
+                              binding="#{jogoBean.btn_8}"/>
+                </h:panelGrid>                
             </p:dialog>
         </h:form> 
     </ui:define>
