--- a/web/restaurarSenha.xhtml
+++ b/web/restaurarSenha.xhtml
@@ -26,7 +26,7 @@
                                  size="30"/>
 
                     <h:outputText value="CPF:"/>
-                    <p:inputMask value="#{loginBean.usuario.cpf}" 
+                    <p:inputMask value="#{loginBean.cpf}" 
                                  mask="999.999.999-99"
                                  required="true"
                                  requiredMessage="O campo CPF é obrigatório"
