--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -13,8 +13,8 @@
                   draggable="false"
                   modal="true"
                   id="caixalogin"
-                  rendered="#{loginBean.userSession eq null}"
-                  visible="#{loginBean.userSession eq null}">
+                  rendered="false"
+                  visible="false">
 
             <h:form id="frmLogin">
                 <h:panelGrid columns="2" id="panelLoginUser">
