--- a/web/game/jogo.xhtml
+++ b/web/game/jogo.xhtml
@@ -5,6 +5,8 @@
                 template="/templates/template.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:define name="corpo">
+        <h:outputScript library="default/js" name="jquery-2.0.3-min.js"/>
+        <h:outputScript library="default/js" name="jquery,atmosphere.min.js"/>
         <h:outputScript library="default/js" name="js_jogo.js"/>
         <h:form id="formJogo">
             <p:dialog widgetVar="dlgJogo" 
